Change gallery to single column on mobile - Fixes #9

--- a/hosting/css/main.css
+++ b/hosting/css/main.css
@@ -329,8 +329,8 @@ img.bottomdot {
 
 .image-grid-content {
   box-sizing: border-box;
-  width: 30%;
-  padding-top: 30%;
+  width: 100%;
+  padding-top: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
